--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "ag-grid-community": "^26.0.0",
     "ag-grid-enterprise": "^26.0.1",
+    "ag-grid-react": "^26.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
